# plant-pot

./: .gdbinit  .gitignore  Cargo.toml  DEBUG_PROBE_USAGE.md  Embed.toml  FLASH_PICO_UF2.md  HARDWARE.md  README.md  SOFTWARE_DEV.md  build.rs  rust-toolchain.toml  rustfmt.toml  shell.nix
.cargo/: config.toml
02-embedded-hal-basics/: 01-rust-language.md  02-abstraction-hals.md  03-pico-hal-usage.md  04-comparison-c-python.md  Cargo.toml
02-embedded-hal-basics/examples/: A-ext-led-blinky.rs
02-embedded-hal-basics/src/: lib.rs
02-hal-basics/: 02-abstraction-hals.md  03-pico-hal-usage.md  Cargo.toml
02-hal-basics/examples/: A-ext-led-blinky.rs
03-async-embassy/: 01-async-rust.md  02-embassy-framework.md  Cargo.toml
03-async-embassy/examples/: B-blink-ticker.rs  C-read-humidity-adc.rs  D-serial-output.rs  E-calibrate-sensor.rs  F-serial-input.rs  G-water-pump.rs  H-pubsub-channel.rs
04-making-sensors/: Cargo.toml
04-making-sensors-probes/: 02-rtt-print-debugging.md  03-breakpoints-probe.md  04-build-swd-usb-probe.md  05-making-capacitive-sensor.md  Cargo.toml
04-making-sensors-probes/examples/: A-make-capacitive-sensor.rs  B-calibrate-capacitive-sensor.rs
04-making-sensors/examples/: A-capacitive-sensor.rs
06-fine-motor-control/: Cargo.toml
06-fine-motor-control/examples/: A-hysteresis-motor-control.rs  B-pid-motor-control.rs  C-change-speed-motor.rs
07-optimising-performance/: 02-switch-riscv-arm.md  Cargo.toml
async-board/: Cargo.toml  build.rs
bsp/: Cargo.toml  README.md
bsp-blink/: Cargo.toml  README.md
bsp-blink/src/: main.rs
bsp-serial/: README.md  (+2 more)
bsp/bsp-gpio/: Cargo.toml  README.md
bsp/bsp-gpio/src/: lib.rs  main.rs
bsp/bsp-serial/: Cargo.toml  README.md  build.rs
bsp/bsp-serial/src/: main.rs
bsp/src/: main.rs
embassy/: Cargo.toml  README.md
embassy-rp-io/: Cargo.toml
embassy-rp-io/src/: usb.rs
embassy/src/: lib.rs  main.rs  monitor_output.rs  outputs.rs  sensing.rs  usb.rs
embassy_esp32/: Cargo.toml  README.md
embassy_esp32/.cargo/: config.toml
embassy_esp32/src/: inputs.rs  lib.rs  main.rs  net.rs  usb_setup.rs  wifi.rs
esp32c6-async/: Cargo.toml
esp32c6-async/.cargo/: config.toml
esp32c6-async/src/: main.rs  outputs.rs  usb_setup.rs
hal/: Cargo.toml
hal/src/: main.rs
pico-async/: Cargo.toml  build.rs
pico-async/src/: lib.rs  main.rs  usb_setup.rs
pico-w-async/: Cargo.toml  README.md
pico-w-async/.cargo/: config.toml
pico-w-async/src/: lib.rs  main.rs  outputs.rs  usb_setup.rs
solution/: Cargo.toml  build.rs
solution/.cargo/: config.toml
solution/src/: control.rs  http_notify.rs  lib.rs  main.rs  outputs.rs  pump.rs  wifi.rs
tutorial/01/: Cargo.toml  README.md
tutorial/01/src/: main.rs
workshop/: Cargo.toml  build.rs
workshop/.cargo/: config.toml
workshop/01-hardware/: 01-overview-setup.md  03-peripheral-glossary.md  04-pico2w-in-depth.md  HARDWARE.md
workshop/01-hardware/00-overview-complete-setup/: README.md
workshop/01-hardware/00-overview-complete-setup/src/: main.rs
workshop/01-hardware/01-embedded-hardware/: README.md
workshop/01-hardware/02-pico2-w-overview/: README.md
workshop/01-hardware/03-simple-pico-flashing/: README.md
workshop/02-software/: DEBUG_PROBE_USAGE.md  README.md
workshop/02-software/00-intro-rust-basics/: README.md
workshop/02-software/01-intro-async-embassy/: Cargo.toml  README.md
workshop/02-software/01-intro-async-embassy/src/: main.rs
workshop/02-software/02-blink-light-timers/: Cargo.toml  README.md
workshop/02-software/02-blink-light-timers/src/: main.rs
workshop/02-software/03-read-humidity-adc/: Cargo.toml  README.md
workshop/02-software/03-read-humidity-adc/src/: lib.rs  main.rs
workshop/02-software/04-serial-print-debug/: Cargo.toml  README.md
workshop/02-software/04-serial-print-debug/src/: lib.rs  main.rs  outputs.rs
workshop/02-software/05-calibrate-humidity-sensor/: Cargo.toml  README.md
workshop/02-software/05-calibrate-humidity-sensor/src/: calc.rs  inputs.rs  lib.rs  main.rs  outputs.rs
workshop/02-software/06-serial-input/: Cargo.toml  README.md
workshop/02-software/06-serial-input/src/: lib.rs  main.rs  usb_input.rs
workshop/02-software/06-switch-on-off-dc-motor/: README.md
workshop/02-software/07-calibrate-water-pump/: README.md
workshop/02-software/07-water-pump/: Cargo.toml  README.md
workshop/02-software/07-water-pump/src/: control.rs  lib.rs  main.rs  usb_input.rs
workshop/02-software/08-parallel-tasks/: Cargo.toml  README.md
workshop/03-advanced/00-setup-wifi-stack/: Cargo.toml  README.md
workshop/03-advanced/01-mobile-notifications/: Cargo.toml
workshop/03-advanced/02-breakpoints-debug-probe/: README.md
workshop/03-advanced/02-defmt-rtt-debug-probe/: README.md
workshop/03-advanced/03-breakpoints-debug-probe/: README.md
workshop/03-advanced/03-hysteresis-motor/: Cargo.toml  README.md
workshop/03-advanced/04-tune-duration-motor-pid/: Cargo.toml
workshop/03-advanced/04-tune-speed-motor-pwm/: README.md
workshop/03-advanced/05-tune-duration-motor-pid/: Cargo.toml
workshop/03-advanced/05-tune-speed-motor-pwm/: Cargo.toml  README.md
workshop/03-advanced/06-shrink-binary-size/: README.md
workshop/03-advanced/06-tune-speed-motor-pwm/: README.md
workshop/03-advanced/08-more-project-ideas/: README.md
workshop/03-async-embassy/: 02-embassy-framework.md  Cargo.toml
workshop/03-async-embassy/examples/: 02-blink-ticker.rs  03-read-humidity-adc.rs  04-serial-output.rs  05-calibrate-sensor.rs  06-serial-input.rs  08-water-pump.rs
workshop/03-async-embassy/src/: lib.rs  wifi.rs
workshop/04-extra-features/: Cargo.toml  README.md
workshop/04-extra-features/01-mobile-notifications/: README.md
workshop/04-extra-features/02-defmt-rtt-debug-probe/: README.md
workshop/04-extra-features/04-hysteresis-motor/: Cargo.toml
workshop/04-extra-features/05-tune-duration-motor-pid/: README.md
workshop/04-extra-features/06-tune-speed-motor-pwm/: Cargo.toml
workshop/04-extra-features/examples/: 01-prioritize-tasks.rs  02-connect-wifi.rs
workshop/04-extra-features/src/: lib.rs
(+104 files in other folders)
