[workspace]
members = ["02-hal-basics", "03-async-embassy", "04-extra-features"]
package.authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
package.edition = "2024"
package.homepage = "https://sysghent.be"
package.license = "MIT"
package.repository = "https://github.com/sysghent/plant-pot"
package.version = "0.0.1"
resolver = "3"

[profile.dev]
debug = 2
opt-level = 0

[workspace.lints]
clippy.cast-precision-loss = "allow"
clippy.diverging-sub-expression = "allow"
clippy.missing-panics-doc = "allow"
clippy.no-effect-underscore-binding = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.unused-async = "allow"
clippy.used-underscore-binding = "allow"
rust.dead-code = "allow"
rust.unreachable-code = "allow"

[workspace.dependencies]
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7", features = [
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-futures = { version = "0.1.1" }
embassy-net = { version = "0.7.0", features = [
    "proto-ipv4",
    "dns",
    "tcp",
    "medium-ip",
    "dhcpv4",
    "defmt",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-rp-io = { path = "embassy-rp-io" }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
heapless = "0.8.0"
num-traits = { version = "0.2.19", default-features = false }
panic-halt = { version = "1.0.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
reqwless = { version = "0.13.0", default-features = false }
static_cell = { version = "2.1.0" }

[workspace.target.'cfg( target_arch = "riscv32" )'.dependencies.embassy-executor]
features = ["arch-riscv32"]


[workspace.target.'cfg( target_arch = "arm" )'.dependencies.embassy-executor]
features = ["arch-cortex-m"]
