[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "hal-basics"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
defmt-rtt.workspace = true
embedded-hal = "1.0.0"
panic-halt.workspace = true
# riscv-rt = "0.14.0"
rp235x-hal = { version = "0.3.0", default-features = false, features = [
    "binary-info",
    "critical-section-impl",

    "defmt",
] }
