[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "making-sensors"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
cortex-m-rt.workspace = true
cyw43.workspace = true
cyw43-pio.workspace = true
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal-basics = { path = "../02-embedded-hal-basics" }
heapless = { workspace = true }
minimal-async-pot = { path = "../03-minimal-async-pot" }
panic-probe = { workspace = true }
reqwless = { workspace = true }
static_cell.workspace = true
