[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "fine-motor-control"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
cortex-m-rt.workspace = true
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
minimal-async-pot = { path = "../03-minimal-async-pot" }
panic-probe = { workspace = true }
