[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "optimising-performance"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
panic-probe = { workspace = true }
static_cell.workspace = true
