[package]
edition = "2024"
name = "pot-bsp"
version = "0.1.0"

[profile.dev]
panic = "abort"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.5" }
embedded-hal = { version = "1.0.0" }
heapless = "0.8.0"
panic-halt = { version = "1.0.0" }
rp-pico = { version = "0.9.0" }

usb-device = "0.3.2"
usbd-serial = "0.2.2"
