[package]
authors.workspace = true
description = "Helper functions to help participants of the workshop get started quickly with WiFi and USB output / input."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "embassy-rp-io"
repository.workspace = true
version.workspace = true

[dependencies]
cyw43.workspace = true
cyw43-pio.workspace = true
defmt.workspace = true
embassy-executor.workspace = true
embassy-net.workspace = true
embassy-rp.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
static_cell.workspace = true

[lints]
workspace = true
