[package]
edition = "2024"
name = "esp32-async-plant"
version = "0.1.0"

[profile.dev]
debug = 2
opt-level = 0

[dependencies]

embedded-hal = "1.0.0"
panic-halt = "1.0.0"

embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0", features = [

    "defmt",
    "executor-interrupt",
    "executor-thread",
] } # Choose an executor mode
embassy-futures = { version = "0.1.1" }

embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] } # Configure timer tick rate
embassy-usb = { version = "0.4.0", features = ["defmt"] }

critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal-async = "1.0"
esp-hal = { version = "0.23.1", features = ["defmt", "esp32c6", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["defmt", "esp32c6"] }
heapless = "0.8.0"
libm = "0.2.15"
num-traits = { version = "0.2.19", default-features = false }
# panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-io-async = "0.6.1"
esp-println = { version = "0.13.1", features = ["esp32c6"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = { version = "2.1.0" }
