[package]
edition = "2024"
name = "pot-hal"

[profile.dev]
panic = "abort"

[dependencies]
cortex-m = { version = "0.7.6", default-features = false }
cortex-m-rt = { version = "0.7.0" }
embedded-hal = { version = "1.0.0" }
heapless = "0.8.0"
panic-halt = { version = "1.0.0" }
rp-pico = "0.9.0"

rp2040-hal = { version = "0.10.2", features = ["critical-section-impl"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
