[package]
edition = "2024"
name = "async-plant"
version = "0.1.0"

[profile.dev]
debug = 2
opt-level = 0

[dependencies]
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
], default-features = false }
cortex-m-rt = { version = "0.7.0" }
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

embassy-embedded-hal = { version = "0.3.0" }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
] } # Choose an executor mode
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.4.0", features = [
    "critical-section-impl",
    "defmt",
    "rp2040",
    "time-driver",
    "unstable-pac",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] } # Configure timer tick rate
embassy-usb = { version = "0.4.0", features = ["defmt"] }

critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal-async = "1.0"
heapless = "0.8.0"
libm = "0.2.15"
num-traits = { version = "0.2.19", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = { version = "2.1.0" }
