[package]
edition = "2024"
name = "solution"
version = "0.0.1"


authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
description = "A complete smart plant pot that detects the soil moisture, turns on a pump to water the plant, and sends WiFi notifications."
homepage = "https://sysghent.be"
license = "MIT"
repository = "https://github.com/sysghent/plant-pot"


[dependencies]
cortex-m-rt = { workspace = true }
cyw43 = { workspace = true }
cyw43-pio = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
heapless = { workspace = true }
num-traits = { workspace = true }
panic-probe = { workspace = true }
reqwless = { workspace = true }
static_cell = { workspace = true }
