[workspace]
members = [
    "02-software/02-blink-light-timers",
    "02-software/03-read-humidity-adc",
    "02-software/04-serial-print-debug",
    "02-software/05-calibrate-humidity-sensor",
    "02-software/06-serial-input",
    "02-software/07-water-pump",
    "02-software/08-parallel-tasks",
    "03-advanced/00-setup-wifi-stack",
    "03-advanced/01-mobile-notifications",
    "03-advanced/03-hysteresis-motor",
    "03-advanced/04-tune-duration-motor-pid",
    "03-advanced/05-tune-speed-motor-pwm",
]
package.authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
package.edition = "2024"
package.homepage = "https://sysghent.be"
package.license = "MIT"
package.repository = "https://github.com/sysghent/plant-pot"
package.version = "0.1.0"
resolver = "3"

[profile.dev]
debug = 2
opt-level = 0

[workspace.lints]
clippy.missing-panics-doc = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.used-underscore-binding = "allow"


[workspace.dependencies]
cortex-m-rt = { version = "0.7.0" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.1" }
embassy-net = { version = "0.7.0", features = [
    "proto-ipv4",
    "dns",
    "tcp",
    "medium-ip",
    "dhcpv4",
    "defmt",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
heapless = "0.8.0"
num-traits = { version = "0.2.19", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
reqwless = { version = "0.13.0", default-features = false }
static_cell = { version = "2.1.0" }
