[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "extra-features"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }
embassy-rp = { workspace = true }
embassy-rp-io.workspace = true
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
heapless = { workspace = true }
panic-probe = { workspace = true }
reqwless = { workspace = true }
