[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "read-humidity-adc"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
cortex-m-rt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-rp = { workspace = true }
embassy-time = { workspace = true }
panic-probe = { workspace = true }
