[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "hysteresis-motor"
repository.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
cortex-m-rt = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-usb = { workspace = true }
heapless = { workspace = true }
panic-probe = { workspace = true }
static_cell = { workspace = true }
